Se modifica el menu de reportes y se añaden diversos reportes. Corrigen algunas validaciones

--- a/src/Reportes/Reporte_ClientesJu.jrxml
+++ b/src/Reportes/Reporte_ClientesJu.jrxml
@@ -14,159 +14,128 @@
 		</conditionalStyle>
 	</style>
 	<subDataset name="PieChartDataset" uuid="005d8692-e3a1-4e44-ae92-bbd14a526f16"/>
-	<parameter name="Fecha" class="java.lang.String"/>
 	<parameter name="usuario" class="java.lang.String"/>
 	<parameter name="ruta" class="java.lang.String"/>
-	<parameter name="mes" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[SELECT
-     ventas."cantidad" AS ventas_cantidad,
-     ventas."total" AS ventas_total,
-     ventas."tipo_de_pago" AS ventas_tipo_de_pago,
-     ventas."cod_venta" AS ventas_cod_venta,
-     ventas."responsable" AS ventas_responsable,
-     ventas."fecha" AS ventas_fecha,
-     ventas."descuento" AS ventas_descuento,
-     ventas."id_valor" AS ventas_id_valor,
-     ventas."cod_cliente" AS ventas_cod_cliente,
-     ventas."descripcion" AS ventas_descripcion,
+     clientes."cod_cliente" AS clientes_cod_cliente,
      clientes."primer_nombre" AS clientes_primer_nombre,
      clientes."primer_apellido" AS clientes_primer_apellido,
+     clientes."direccion" AS clientes_direccion,
+     clientes."telefono1" AS clientes_telefono1,
+     clientes."telefono2" AS clientes_telefono2,
+     clientes."email" AS clientes_email,
+     clientes."segundo_apellido" AS clientes_segundo_apellido,
      clientes."nombre_empresa" AS clientes_nombre_empresa,
      clientes."cedula" AS clientes_cedula,
-     clientes."cod_cliente" AS clientes_cod_cliente
+     clientes."tipo_persona" AS clientes_tipo_persona,
+     clientes."segundo_nombre" AS clientes_segundo_nombre
 FROM
-     "public"."clientes" clientes INNER JOIN "public"."ventas" ventas ON clientes."cod_cliente" = ventas."cod_cliente"
+     "public"."clientes" clientes
 WHERE
-     fecha LIKE '%$P!{Fecha}%']]>
+clientes."tipo_persona" = 'juridica']]>
 	</queryString>
-	<field name="ventas_cantidad" class="java.math.BigDecimal"/>
-	<field name="ventas_total" class="java.lang.Float"/>
-	<field name="ventas_tipo_de_pago" class="java.lang.String"/>
-	<field name="ventas_cod_venta" class="java.lang.String"/>
-	<field name="ventas_responsable" class="java.lang.String"/>
-	<field name="ventas_fecha" class="java.lang.String"/>
-	<field name="ventas_descuento" class="java.lang.String"/>
-	<field name="ventas_id_valor" class="java.lang.Integer"/>
-	<field name="ventas_cod_cliente" class="java.lang.Integer"/>
-	<field name="ventas_descripcion" class="java.lang.String"/>
+	<field name="clientes_cod_cliente" class="java.lang.Integer"/>
 	<field name="clientes_primer_nombre" class="java.lang.String"/>
 	<field name="clientes_primer_apellido" class="java.lang.String"/>
+	<field name="clientes_direccion" class="java.lang.String"/>
+	<field name="clientes_telefono1" class="java.lang.Long"/>
+	<field name="clientes_telefono2" class="java.lang.Long"/>
+	<field name="clientes_email" class="java.lang.String"/>
+	<field name="clientes_segundo_apellido" class="java.lang.String"/>
 	<field name="clientes_nombre_empresa" class="java.lang.String"/>
 	<field name="clientes_cedula" class="java.lang.String"/>
-	<field name="clientes_cod_cliente" class="java.lang.Integer"/>
+	<field name="clientes_tipo_persona" class="java.lang.String"/>
+	<field name="clientes_segundo_nombre" class="java.lang.String"/>
 	<title>
 		<band height="98" splitType="Stretch">
-			<image hAlign="Center">
-				<reportElement x="0" y="0" width="553" height="66" uuid="a05eff6f-baca-4fd8-8fb0-87d0b8d24a52"/>
-				<imageExpression><![CDATA[$P{ruta}+"\\tornavica.PNG"]]></imageExpression>
-			</image>
 			<frame>
 				<reportElement mode="Opaque" x="3" y="66" width="553" height="32" forecolor="#000000" backcolor="#406040" uuid="e1de3e50-76cf-47c1-aacf-d10f80c11d7d"/>
-				<textField>
-					<reportElement x="7" y="0" width="513" height="29" forecolor="#FFFFFF" uuid="feff0c55-35d1-435a-a0de-fa6c5cda6e8f"/>
-					<textElement verticalAlignment="Middle">
+				<staticText>
+					<reportElement style="SubTitle" x="11" y="3" width="445" height="29" forecolor="#FFFFFF" uuid="07636396-daa2-4e76-8975-84f2882789d2"/>
+					<textElement>
 						<font fontName="Verdana" size="20" isBold="false"/>
 					</textElement>
-					<textFieldExpression><![CDATA["Ventas Realizadas en el Mes: "+$P{mes}]]></textFieldExpression>
-				</textField>
+					<text><![CDATA[Listado de Clientes (Persona Juridica)]]></text>
+				</staticText>
 			</frame>
+			<image>
+				<reportElement x="118" y="0" width="301" height="66" uuid="dd51d4ea-95e3-4d75-9eba-697b7c1ca50e"/>
+				<imageExpression><![CDATA[$P{ruta}+"\\tornavica.png"]]></imageExpression>
+			</image>
 		</band>
 	</title>
 	<pageHeader>
 		<band splitType="Stretch"/>
 	</pageHeader>
 	<columnHeader>
-		<band height="18" splitType="Stretch">
+		<band height="19" splitType="Stretch">
 			<staticText>
-				<reportElement style="Column header" x="10" y="0" width="67" height="18" forecolor="#000000" uuid="239fe6bb-969f-4aba-a4fc-d8c73ba3f3d7"/>
-				<textElement textAlignment="Center" verticalAlignment="Bottom">
+				<reportElement style="Column header" x="3" y="0" width="56" height="18" forecolor="#000000" uuid="239fe6bb-969f-4aba-a4fc-d8c73ba3f3d7"/>
+				<textElement textAlignment="Left" verticalAlignment="Bottom">
 					<font fontName="Verdana" size="11" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Codigo]]></text>
 			</staticText>
 			<staticText>
-				<reportElement style="Column header" x="87" y="0" width="100" height="18" forecolor="#000000" uuid="3aa3ed17-10d4-46f5-a465-12c0f454b5cd"/>
+				<reportElement style="Column header" x="170" y="0" width="88" height="18" forecolor="#000000" uuid="59cabce8-6027-4c02-8668-562f96e737c9"/>
 				<textElement textAlignment="Center" verticalAlignment="Bottom">
 					<font fontName="Verdana" size="11" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Cliente]]></text>
+				<text><![CDATA[Rif]]></text>
 			</staticText>
 			<staticText>
-				<reportElement style="Column header" x="192" y="0" width="76" height="18" forecolor="#000000" uuid="59cabce8-6027-4c02-8668-562f96e737c9"/>
+				<reportElement style="Column header" x="385" y="0" width="171" height="18" forecolor="#000000" uuid="82e41ed7-3de1-4237-aad0-d89cf77a1590"/>
 				<textElement textAlignment="Center" verticalAlignment="Bottom">
 					<font fontName="Verdana" size="11" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Cedula]]></text>
+				<text><![CDATA[Num. Telefonicos]]></text>
 			</staticText>
 			<staticText>
-				<reportElement style="Column header" x="274" y="0" width="89" height="18" forecolor="#000000" uuid="a1f9630c-170d-4ddb-9dfb-d143d37dcbc3"/>
-				<textElement textAlignment="Center" verticalAlignment="Bottom">
-					<font fontName="Verdana" size="9" isBold="true"/>
-				</textElement>
-				<text><![CDATA[Cant. Productos]]></text>
-			</staticText>
-			<staticText>
-				<reportElement style="Column header" x="369" y="0" width="79" height="18" forecolor="#000000" uuid="0bee56c4-3eeb-45a4-b3ec-c47f985abcf1"/>
+				<reportElement style="Column header" x="59" y="0" width="112" height="18" forecolor="#000000" uuid="e5200557-3e4e-4dcc-9dbf-0f67d6a8342b"/>
 				<textElement textAlignment="Center" verticalAlignment="Bottom">
 					<font fontName="Verdana" size="11" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Total (bsf)]]></text>
+				<text><![CDATA[Empresa]]></text>
 			</staticText>
 			<staticText>
-				<reportElement style="Column header" x="458" y="0" width="98" height="18" forecolor="#000000" uuid="02f52e93-6730-45b5-8123-cd6a730a8a3b"/>
+				<reportElement style="Column header" x="258" y="0" width="127" height="18" forecolor="#000000" uuid="c1d94fc2-9fb2-4cab-b67d-a35cf7574bf6"/>
 				<textElement textAlignment="Center" verticalAlignment="Bottom">
 					<font fontName="Verdana" size="11" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Fecha]]></text>
+				<text><![CDATA[Direccion]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="21" splitType="Stretch">
+		<band height="31" splitType="Stretch">
 			<frame>
-				<reportElement style="Row" isPrintRepeatedValues="false" mode="Opaque" x="0" y="1" width="553" height="20" uuid="59972cf7-d5c3-4106-9e54-7082579d92a2"/>
+				<reportElement style="Row" isPrintRepeatedValues="false" mode="Opaque" x="1" y="0" width="553" height="30" uuid="59972cf7-d5c3-4106-9e54-7082579d92a2"/>
 				<textField>
-					<reportElement x="9" y="0" width="67" height="20" uuid="7efda362-d08d-4922-b06c-a030d027283d"/>
-					<textElement textAlignment="Center">
-						<font fontName="Verdana" isBold="false"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$F{ventas_cod_venta}]]></textFieldExpression>
+					<reportElement x="3" y="0" width="56" height="20" uuid="402087cb-7436-48cc-8444-f28a3498d85a"/>
+					<textElement textAlignment="Left"/>
+					<textFieldExpression><![CDATA[$F{clientes_cod_cliente}]]></textFieldExpression>
 				</textField>
-				<textField isBlankWhenNull="true">
-					<reportElement x="86" y="0" width="100" height="20" uuid="0fff5e92-9884-4183-9089-1ccc2afcef7f"/>
-					<textElement textAlignment="Center"/>
-					<textFieldExpression><![CDATA[$F{clientes_nombre_empresa}]]></textFieldExpression>
-				</textField>
-				<textField isBlankWhenNull="true">
-					<reportElement x="193" y="0" width="75" height="20" uuid="17805495-c560-4aae-a08e-44dc4bfa10dc"/>
+				<textField isBlankWhenNull="false">
+					<reportElement x="171" y="0" width="87" height="20" uuid="f979aec9-0537-4ccf-81ec-f05e778fe52b"/>
 					<textElement textAlignment="Center"/>
 					<textFieldExpression><![CDATA[$F{clientes_cedula}]]></textFieldExpression>
 				</textField>
-				<textField isBlankWhenNull="true">
-					<reportElement x="288" y="0" width="64" height="20" uuid="b908e244-8019-4da8-8237-8f12167c38b3"/>
-					<textElement textAlignment="Center"/>
-					<textFieldExpression><![CDATA[$F{ventas_cantidad}]]></textFieldExpression>
+				<textField>
+					<reportElement x="258" y="0" width="127" height="30" uuid="4d0bed76-5e45-4bc9-9f9b-c8f527345487"/>
+					<textFieldExpression><![CDATA[$F{clientes_direccion}]]></textFieldExpression>
 				</textField>
-				<textField pattern="#,##0.00;#,##0.00-" isBlankWhenNull="true">
-					<reportElement x="368" y="0" width="79" height="20" uuid="5ebae214-0900-4940-b870-37b4b8473d69"/>
+				<textField>
+					<reportElement x="385" y="0" width="168" height="30" uuid="163f1f47-d040-4bb4-923e-d7eb3790b417"/>
 					<textElement textAlignment="Center"/>
-					<textFieldExpression><![CDATA[$F{ventas_total}]]></textFieldExpression>
-				</textField>
-				<textField isBlankWhenNull="true">
-					<reportElement x="87" y="0" width="49" height="20" uuid="6690130b-6c55-438a-86fa-aa5f2b29dd62"/>
-					<textElement textAlignment="Center"/>
-					<textFieldExpression><![CDATA[$F{clientes_primer_nombre}]]></textFieldExpression>
+					<textFieldExpression><![CDATA[$F{clientes_telefono1}+"-"+$F{clientes_telefono2}]]></textFieldExpression>
 				</textField>
 				<textField isBlankWhenNull="true">
-					<reportElement x="139" y="0" width="49" height="20" uuid="3ada62a7-ed3b-4282-ac1c-99bc574b85fc"/>
-					<textElement textAlignment="Center"/>
-					<textFieldExpression><![CDATA[$F{clientes_primer_apellido}]]></textFieldExpression>
-				</textField>
-				<textField isBlankWhenNull="true">
-					<reportElement x="454" y="0" width="99" height="20" uuid="b43d7aa7-ac48-40c8-936c-99da7bf2822c"/>
-					<textElement textAlignment="Center"/>
-					<textFieldExpression><![CDATA[$F{ventas_fecha}]]></textFieldExpression>
+					<reportElement x="68" y="1" width="100" height="20" uuid="08779e3f-16cb-4836-98c5-c39a8f565ae0"/>
+					<textElement textAlignment="Center">
+						<font isItalic="false"/>
+					</textElement>
+					<textFieldExpression><![CDATA[$F{clientes_primer_nombre}+" "+$F{clientes_primer_apellido}]]></textFieldExpression>
 				</textField>
 			</frame>
 		</band>
@@ -200,7 +169,7 @@ WHERE
 					<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
 				</textField>
 				<textField pattern="dd-MMM-yyyy">
-					<reportElement x="18" y="4" width="147" height="20" forecolor="#FFFFFF" uuid="2d63c194-34de-49f5-b796-897788a1c426"/>
+					<reportElement x="18" y="4" width="129" height="20" forecolor="#FFFFFF" uuid="2d63c194-34de-49f5-b796-897788a1c426"/>
 					<textElement>
 						<font fontName="Verdana"/>
 					</textElement>
