--- a/src/Reportes/Reporte_Clientes.jrxml
+++ b/src/Reportes/Reporte_Clientes.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="a6622fa1-389a-4a31-bc1a-4740f6efcc2e">
 	<property name="ireport.zoom" value="1.5"/>
-	<property name="ireport.x" value="110"/>
+	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<style name="Title" forecolor="#FFFFFF" fontName="Times New Roman" fontSize="50" isBold="false" pdfFontName="Times-Bold"/>
 	<style name="SubTitle" forecolor="#666666" fontName="Times New Roman" fontSize="18" isBold="false" pdfFontName="Times-Roman"/>
@@ -109,7 +109,7 @@ FROM
 	<detail>
 		<band height="31" splitType="Stretch">
 			<frame>
-				<reportElement style="Row" isPrintRepeatedValues="false" mode="Opaque" x="0" y="1" width="553" height="30" uuid="59972cf7-d5c3-4106-9e54-7082579d92a2"/>
+				<reportElement style="Row" isPrintRepeatedValues="false" mode="Opaque" x="1" y="0" width="553" height="30" uuid="59972cf7-d5c3-4106-9e54-7082579d92a2"/>
 				<textField>
 					<reportElement x="3" y="0" width="56" height="20" uuid="402087cb-7436-48cc-8444-f28a3498d85a"/>
 					<textElement textAlignment="Left"/>
@@ -120,10 +120,6 @@ FROM
 					<textElement textAlignment="Center"/>
 					<textFieldExpression><![CDATA[$F{clientes_cedula}]]></textFieldExpression>
 				</textField>
-				<textField isBlankWhenNull="true">
-					<reportElement x="59" y="0" width="109" height="20" uuid="38e6d248-9694-444b-91dc-b6ab08ef6213"/>
-					<textFieldExpression><![CDATA[$F{clientes_nombre_empresa}]]></textFieldExpression>
-				</textField>
 				<textField>
 					<reportElement x="258" y="0" width="127" height="30" uuid="4d0bed76-5e45-4bc9-9f9b-c8f527345487"/>
 					<textFieldExpression><![CDATA[$F{clientes_direccion}]]></textFieldExpression>
@@ -133,11 +129,23 @@ FROM
 					<textElement textAlignment="Center"/>
 					<textFieldExpression><![CDATA[$F{clientes_telefono1}+"-"+$F{clientes_telefono2}]]></textFieldExpression>
 				</textField>
+				<textField isBlankWhenNull="true">
+					<reportElement x="69" y="1" width="46" height="20" uuid="d7113ea1-1277-4f4e-b954-b32a556cb602"/>
+					<textElement textAlignment="Right"/>
+					<textFieldExpression><![CDATA[$F{clientes_primer_nombre}]]></textFieldExpression>
+				</textField>
+				<textField isBlankWhenNull="true">
+					<reportElement x="68" y="1" width="100" height="20" uuid="08779e3f-16cb-4836-98c5-c39a8f565ae0"/>
+					<textElement textAlignment="Center">
+						<font isItalic="false"/>
+					</textElement>
+					<textFieldExpression><![CDATA[$F{clientes_nombre_empresa}]]></textFieldExpression>
+				</textField>
+				<textField isBlankWhenNull="true">
+					<reportElement x="117" y="1" width="45" height="20" uuid="c2aae4d1-1540-4216-ba22-93085d0108c3"/>
+					<textFieldExpression><![CDATA[$F{clientes_primer_apellido}]]></textFieldExpression>
+				</textField>
 			</frame>
-			<textField>
-				<reportElement x="59" y="0" width="112" height="20" uuid="edc66f1b-70d0-47ca-b93a-51778c28a07c"/>
-				<textFieldExpression><![CDATA[$F{clientes_primer_nombre}+""+$F{clientes_primer_apellido}]]></textFieldExpression>
-			</textField>
 		</band>
 	</detail>
 	<columnFooter>
