--- a/src/Reportes/Reporte_Ventas.jrxml
+++ b/src/Reportes/Reporte_Ventas.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="a6622fa1-389a-4a31-bc1a-4740f6efcc2e">
 	<property name="ireport.zoom" value="1.5"/>
-	<property name="ireport.x" value="353"/>
+	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<style name="Title" forecolor="#FFFFFF" fontName="Times New Roman" fontSize="50" isBold="false" pdfFontName="Times-Bold"/>
 	<style name="SubTitle" forecolor="#666666" fontName="Times New Roman" fontSize="18" isBold="false" pdfFontName="Times-Roman"/>
@@ -103,7 +103,7 @@ FROM
 			</staticText>
 			<staticText>
 				<reportElement style="Column header" x="225" y="0" width="89" height="18" forecolor="#000000" uuid="a1f9630c-170d-4ddb-9dfb-d143d37dcbc3"/>
-				<textElement textAlignment="Left" verticalAlignment="Top" rotation="None">
+				<textElement textAlignment="Left" verticalAlignment="Bottom" rotation="None">
 					<font fontName="Verdana" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Cant. Productos]]></text>
@@ -128,6 +128,23 @@ FROM
 		<band height="20" splitType="Stretch">
 			<frame>
 				<reportElement style="Row" isPrintRepeatedValues="false" mode="Opaque" x="3" y="0" width="553" height="20" uuid="59972cf7-d5c3-4106-9e54-7082579d92a2"/>
+				<textField isBlankWhenNull="true">
+					<reportElement x="62" y="0" width="47" height="20" uuid="59d54a9d-f223-4d22-9a88-718bb8ba5d85"/>
+					<textElement textAlignment="Center"/>
+					<textFieldExpression><![CDATA[$F{clientes_primer_nombre}]]></textFieldExpression>
+				</textField>
+				<textField isBlankWhenNull="true">
+					<reportElement x="60" y="0" width="100" height="20" uuid="6fd65385-f628-4d81-9c3b-cc74791a1831"/>
+					<textElement textAlignment="Center">
+						<font isItalic="false"/>
+					</textElement>
+					<textFieldExpression><![CDATA[$F{clientes_nombre_empresa}]]></textFieldExpression>
+				</textField>
+				<textField isBlankWhenNull="true">
+					<reportElement x="108" y="0" width="47" height="20" uuid="47267410-7e38-437e-a95c-c01a4fd2ca54"/>
+					<textElement textAlignment="Center"/>
+					<textFieldExpression><![CDATA[$F{clientes_primer_apellido}]]></textFieldExpression>
+				</textField>
 				<textField>
 					<reportElement x="222" y="0" width="89" height="20" uuid="d0859c67-c8cd-43f8-9103-f06996854839"/>
 					<textElement textAlignment="Center"/>
@@ -152,22 +169,12 @@ FROM
 					<reportElement x="490" y="0" width="63" height="20" uuid="9d27a183-c2de-4e4d-8790-2c0b7ce82185"/>
 					<textFieldExpression><![CDATA[$F{ventas_fecha}]]></textFieldExpression>
 				</textField>
-				<textField isBlankWhenNull="true">
-					<reportElement x="60" y="0" width="99" height="20" uuid="c7cd9ee0-8a89-4fc6-92fb-0fd767d121c8"/>
+				<textField pattern="#,##0.00;-#,##0.00">
+					<reportElement x="311" y="0" width="79" height="20" uuid="111a36e3-3d3f-4ec1-a27b-a8f2e568190f"/>
 					<textElement textAlignment="Center"/>
-					<textFieldExpression><![CDATA[$F{clientes_nombre_empresa}]]></textFieldExpression>
-				</textField>
-				<textField isBlankWhenNull="true">
-					<reportElement x="60" y="0" width="99" height="18" uuid="a061d979-817c-415f-a535-899307acbf4f"/>
-					<textElement textAlignment="Center"/>
-					<textFieldExpression><![CDATA[$F{clientes_primer_nombre}+""+$F{clientes_primer_apellido}]]></textFieldExpression>
+					<textFieldExpression><![CDATA[$F{ventas_total}]]></textFieldExpression>
 				</textField>
 			</frame>
-			<textField>
-				<reportElement x="314" y="0" width="79" height="20" uuid="111a36e3-3d3f-4ec1-a27b-a8f2e568190f"/>
-				<textElement textAlignment="Center"/>
-				<textFieldExpression><![CDATA[$F{ventas_total}]]></textFieldExpression>
-			</textField>
 		</band>
 	</detail>
 	<columnFooter>
